--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -11,4 +11,5 @@ NODE_ENV=development
 CLOUDINARY_CLOUD_NAME=dzpf5joxo
 CLOUDINARY_API_KEY=976327459376693
 CLOUDINARY_API_SECRET=ZLiCw_CByS9RK6NMnyAEJd3qcA4
+FRONTEND_URL=http://localhost:5173
 
