--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -23,6 +23,7 @@
     "react-cropper": "^2.3.3",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.2.0",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.54.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
@@ -30,6 +31,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
+    "react-select": "^5.9.0",
     "react-toastify": "^10.0.6",
     "yup": "^1.5.0"
   },
