--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^7.0.2",
     "react-select": "^5.9.0",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.15.0",
     "yup": "^1.5.0"
   },
   "devDependencies": {
