port added in env file

--- a/FRONTEND/.env
+++ b/FRONTEND/.env
@@ -1,1 +1,3 @@
 VITE_RAZORPAY_KEY_ID=rzp_test_baMJTUQVUIMBOg
+VITE_USERAXIOS=http://localhost:3000/user
+VITE_ADMINAXIOS=http://localhost:3000/admin
