--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -14,6 +14,6 @@ CLOUDINARY_API_SECRET=ZLiCw_CByS9RK6NMnyAEJd3qcA4
 FRONTEND_URL=http://localhost:5173
 RAZORPAY_KEY_ID=rzp_test_baMJTUQVUIMBOg
 RAZORPAY_KEY_SECRET=k6JJJm0ijBwKGEJFEqsxGFBI
-
+MONGODBATLAS=mongodb+srv://aparnakanatil2002:lushauramongodbatlas@cluster0.qqlqq.mongodb.net/lushaura?retryWrites=true&w=majority&appName=Cluster0
 
 
