--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.9.16",
     "pdfkit": "^0.16.0",
     "razorpay": "^2.9.5",
