--- a/FRONTEND/.env
+++ b/FRONTEND/.env
@@ -1,5 +1,5 @@
 VITE_RAZORPAY_KEY_ID=rzp_test_baMJTUQVUIMBOg
-# VITE_USERAXIOS=http://localhost:3000/user
-# VITE_ADMINAXIOS=http://localhost:3000/admin
-VITE_USERAXIOS=https://lushaura.live/user
-VITE_ADMINAXIOS=https://lushaura.live/admin
+VITE_USERAXIOS=http://localhost:3000/user
+VITE_ADMINAXIOS=http://localhost:3000/admin
+# VITE_USERAXIOS=https://lushaura.live/user
+# VITE_ADMINAXIOS=https://lushaura.live/admin
