--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -36,6 +36,7 @@
     "react-select": "^5.9.0",
     "react-toastify": "^10.0.6",
     "recharts": "^2.15.0",
+    "redux-persist": "^6.0.0",
     "yup": "^1.5.0"
   },
   "devDependencies": {
